@@ -1,5 +1,5 @@
 #ifndef lint
-static char *RCSid() { return RCSid("$Id: graphics.c,v 1.32 2000/07/25 13:12:18 mikulik Exp $"); }
+static char *RCSid() { return RCSid("$Id: graphics.c,v 1.33 2000/08/02 13:53:10 mikulik Exp $"); }
 #endif
 
 /* GNUPLOT - graphics.c */
@@ -1781,6 +1781,8 @@ int pcount;			/* count of plots in linked list */
 /* PLACE ARROWS */
     for (this_arrow = first_arrow; this_arrow != NULL; this_arrow = this_arrow->next) {
 	unsigned int sx, sy, ex, ey;
+	extern int curr_arrow_headlength;
+	extern double curr_arrow_headangle;
 
 	if (this_arrow->layer)
 	    continue;
@@ -1788,6 +1790,19 @@ int pcount;			/* count of plots in linked list */
 	map_position(&this_arrow->end, &ex, &ey, "arrow");
 
 	term_apply_lp_properties(&(this_arrow->lp_properties));
+	curr_arrow_headlength = 0;
+	if (this_arrow->headsize.x > 0) { /* set head length+angle for term->arrow */
+	    int itmp, x1, x2;
+	    double savex = this_arrow->headsize.x;
+	    curr_arrow_headangle = this_arrow->headsize.y;
+	    this_arrow->headsize.y = 1.0; /* any value, just avoid log y */
+	    map_position(&this_arrow->headsize, &x2, &itmp, "arrow");
+	    this_arrow->headsize.x = 0; /* measure length from zero */
+	    map_position(&this_arrow->headsize, &x1, &itmp, "arrow");
+	    curr_arrow_headlength = x2 - x1;
+	    this_arrow->headsize.y = curr_arrow_headangle; /* restore the angle */
+	    this_arrow->headsize.x = savex; /* restore the length */
+	}
 	(*t->arrow) (sx, sy, ex, ey, this_arrow->head);
     }
 
